fixed close button alignment

--- a/src/components/Settings/SettingsView/SettingsView.module.scss
+++ b/src/components/Settings/SettingsView/SettingsView.module.scss
@@ -16,6 +16,7 @@
 .header {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%;
   justify-content: space-between;
   margin-bottom: 40px;
